Fix spacing in fact modal under category checkbox (#389)
It is now 8px padding.

--- a/src/App.scss
+++ b/src/App.scss
@@ -353,6 +353,10 @@
   padding-bottom: 16px;
 }
 
+.sm-padding-bottom {
+  padding-bottom: 8px;
+}
+
 .margin-right-5-px {
   margin-right: 5px;
 }
